# OpenReCon

./: LICENSE  README.md  app.py  main.py  param_parser.py  pyproject.toml  run_gui.sh  run_gui_conda.sh
.streamlit/: config.toml  style.css
data/SSBM/: N1000_K10_p0.01_eta0.02.pt  N1000_K10_p0.02_eta0.02.pt  N1000_K10_p0.03_eta0.02.pt  N1000_K10_p0.04_eta0.02.pt  N1000_K10_p0.05_eta0.02.pt  N1000_K4_p0.01_eta0.02.pt  N1000_K5_p0.01_eta0.02.pt  N1000_K5_p0.01_eta0.04.pt  N1000_K5_p0.01_eta0.06.pt  N1000_K5_p0.01_eta0.08.pt  N1000_K5_p0.01_eta0.pt  N1000_K6_p0.01_eta0.02.pt  N1000_K7_p0.01_eta0.02.pt  N1000_K8_p0.01_eta0.02.pt  N1200_K5_p0.01_eta0.pt  N300_K5_p0.01_eta0.pt  N500_K5_p0.01_eta0.pt  N800_K5_p0.01_eta0.pt
data/realworld/: bitcoinotc.pk  ppi.pk  rainfall.pk
src/: __init__.py  boundary_refine.py  cl_layers.py  cl_models.py  cl_utils.py  dimension_reduction.py  embedding.py  initial_clustering.py  metrics.py  pipeline.py  recluster.py  structural_refine.py  utils.py  visualization_callback.py  visualization_components.py
